# route/v2/nftables.go
@@ -17,3 +17,17 @@ func (s *Firewall) GetVersion(ctx echo.Context) error {
 	version := service.MyService.Firewall().GetVersion()
 	return ctx.JSON(http.StatusOK, codegen.GetVersionResponseOK{Data: &version})
 }
+
+func (s *Firewall) OpenOrClosePort(ctx echo.Context) error {
+	var request codegen.Port
+	if err := ctx.Bind(&request); err != nil {
+		message := err.Error()
+		return ctx.JSON(http.StatusBadRequest, codegen.ResponseBadRequest{Message: &message})
+	}
+	err := service.MyService.Firewall().OpenOrClosePort(request.Port, request.Action)
+	if err != nil {
+		message := err.Error()
+		return ctx.JSON(http.StatusBadRequest, codegen.ResponseBadRequest{Message: &message})
+	}
+	return ctx.JSON(http.StatusOK, codegen.ChangePortResponseOK{})
+}
